# open-mainframe

./: -  .dockerignore  CLAUDE.md  Cargo.toml  RALPH-IMPLEMENT.md  RALPH-PROMPT-AGENT-LAYER.md  RALPH-PROMPT.md  RALPH-ZOS-IMPLEMENT.md  RALPH-ZOS-PLANNING.md  RALPH-ZOS-UTILITIES-RESEARCH.md  RALPH-ZOSMF-CONFORMANCE.md  RALPH-ZOWE-IMPLEMENT.md  RALPH-ZOWE-PLAN.md  RALPH-ZOWE-RESEARCH.md  README.md  zosmf.toml  zowe.config.json
crates/open-mainframe-adabas/: Cargo.toml  README.md
crates/open-mainframe-adabas/src/: acb.rs  descriptor.rs  fdt.rs  lib.rs  modify.rs  nucleus.rs  read.rs  search.rs  storage.rs  transaction.rs  utilities.rs
crates/open-mainframe-clist/: Cargo.toml  README.md
crates/open-mainframe-clist/src/: functions.rs  interpreter.rs  io.rs  lib.rs  parser.rs  tso_bridge.rs
crates/open-mainframe-cobol/: Cargo.toml  README.md
crates/open-mainframe-cobol/src/: lib.rs  macros.rs
crates/open-mainframe-cobol/src/ast/: data.rs  expressions.rs  mod.rs  statements.rs
crates/open-mainframe-cobol/src/intrinsics/: datetime.rs  mod.rs  (+2 more)
crates/open-mainframe-crypto/: Cargo.toml  README.md
crates/open-mainframe-crypto/src/: asymmetric.rs  audit.rs  error.rs  exits.rs  keystore.rs  lib.rs  racf_crypto.rs  seclabel.rs  symmetric.rs
crates/open-mainframe-drda/: Cargo.toml
crates/open-mainframe-drda/src/: code_points.rs  connection.rs  ddm.rs  dss.rs  error.rs  handler.rs  lib.rs  response.rs  secmec9.rs  server.rs  sql_handler.rs
crates/open-mainframe-easytrieve/: Cargo.toml  README.md
crates/open-mainframe-easytrieve/src/: fileio.rs  interpreter.rs  lib.rs  macros.rs  parser.rs  report.rs  sort.rs  sql.rs
crates/open-mainframe-focus/: Cargo.toml  README.md
crates/open-mainframe-focus/src/: adapters.rs  dialogue.rs  filedef.rs  functions.rs  graph_engine.rs  joins.rs  lib.rs  mfd.rs  modify_engine.rs  output.rs  parser.rs  table_engine.rs
crates/open-mainframe-hlasm/: Cargo.toml  README.md
crates/open-mainframe-hlasm/src/: directives.rs  instruction.rs  lexer.rs  lib.rs  object.rs  symbol.rs
crates/open-mainframe-idms/: Cargo.toml  README.md
crates/open-mainframe-idms/src/: ads.rs  codasyl.rs  currency.rs  dc.rs  dml.rs  lib.rs  lock.rs  lrf.rs  precompiler.rs  recovery.rs  schema.rs  sql_option.rs  storage.rs
crates/open-mainframe-ims/: Cargo.toml  README.md
crates/open-mainframe-ims/src/: codegen.rs  connect.rs  fastpath.rs  lib.rs  mfs_compiler.rs  mfs_parser.rs  mfs_runtime.rs  msc.rs  operator.rs  otma.rs  persist.rs  regions.rs  schema.rs  tm.rs
crates/open-mainframe-ispf/: Cargo.toml  README.md
crates/open-mainframe-ispf/src/: dialog.rs  editor.rs  isredit.rs  lib.rs  library.rs  panel.rs  skeleton.rs  utilities.rs
crates/open-mainframe-jcl/: Cargo.toml  README.md
crates/open-mainframe-jcl/src/: lib.rs  procedure.rs
crates/open-mainframe-jes2/: Cargo.toml  README.md
crates/open-mainframe-jes2/src/: checkpoint.rs  commands.rs  config.rs  error.rs  exit.rs  intrdr.rs  jecl.rs  job.rs  lib.rs  output.rs  queue.rs  spool.rs
crates/open-mainframe-lang-core/: Cargo.toml  README.md
crates/open-mainframe-lang-core/src/: diagnostic.rs  lib.rs  preprocess.rs  span.rs  traits.rs
crates/open-mainframe-mvs/: Cargo.toml  README.md
crates/open-mainframe-mvs/src/: error.rs  lib.rs
crates/open-mainframe-mvs/tests/: integration.rs
crates/open-mainframe-natural/: Cargo.toml  README.md
crates/open-mainframe-natural/src/: adabas_access.rs  data_model.rs  environment.rs  functions.rs  interpreter.rs  lib.rs  manipulation.rs  maps.rs  output.rs  parser.rs  sql_access.rs  sysvars.rs  workfiles.rs
crates/open-mainframe-networking/: Cargo.toml  README.md
crates/open-mainframe-networking/src/: appc.rs  ftp.rs  lib.rs  security.rs  sna.rs  sockets.rs  ssh.rs  sysplex.rs  tcpip.rs  tls.rs  vtam.rs
crates/open-mainframe-parmlib/: Cargo.toml  README.md
crates/open-mainframe-parmlib/src/: lib.rs  members.rs  operator.rs  subsystem.rs  symbols.rs
crates/open-mainframe-pgmmgmt/: Cargo.toml  README.md
crates/open-mainframe-pgmmgmt/src/: binder.rs  lib.rs  objmod.rs  program.rs
crates/open-mainframe-pli/: Cargo.toml  README.md
crates/open-mainframe-pli/src/: interpreter.rs  lexer.rs  lib.rs  parser.rs
crates/open-mainframe-precompilers/: Cargo.toml  README.md
crates/open-mainframe-precompilers/src/: cics.rs  db2.rs  lib.rs
crates/open-mainframe-racf/: Cargo.toml  README.md
crates/open-mainframe-racf/src/: auth.rs  certificate.rs  database.rs  dataset.rs  error.rs  exits.rs  lib.rs  profile.rs  resource.rs  saf.rs  seclabel.rs  types.rs  utilities.rs
crates/open-mainframe-racf/tests/: integration.rs
crates/open-mainframe-rexx/: Cargo.toml  README.md
crates/open-mainframe-rexx/src/: ast.rs  builtins.rs  interpreter.rs  lexer.rs  lib.rs  parse_template.rs  parser.rs  token.rs  value.rs
crates/open-mainframe-runtime/: Cargo.toml  README.md
crates/open-mainframe-runtime/src/: abend.rs  bits.rs  condition.rs  date_time.rs  enclave.rs  heap.rs  ilc.rs  interpreter.rs  lib.rs  locale.rs  math.rs  message.rs  options.rs  sort_verb.rs
crates/open-mainframe-syscmd/: Cargo.toml  README.md
crates/open-mainframe-syscmd/src/: commands.rs  lib.rs  sdsf.rs
crates/open-mainframe-tso/: Cargo.toml  README.md
crates/open-mainframe-tso/src/: commands.rs  error.rs  exec.rs  jobs.rs  lib.rs  parser.rs  rexx_tso.rs  services.rs  session.rs
crates/open-mainframe-utilities/: Cargo.toml  README.md
crates/open-mainframe-utilities/src/: amaspzap.rs  batch.rs  error.rs  iebcompr.rs  iebcopy.rs  iebdg.rs  iebgener.rs  iebptpch.rs  iebupdte.rs  ieh.rs  lib.rs  subsystems.rs
crates/open-mainframe-wlm/: Cargo.toml  README.md
crates/open-mainframe-wlm/src/: capping.rs  classify.rs  enclave.rs  goals.rs  health.rs  iwm.rs  lib.rs  operator.rs  persistence.rs  policy.rs  scheduling.rs  service.rs
crates/open-mainframe-zosmf/: Cargo.toml  README.md
crates/open-mainframe-zosmf/src/: cics_runner.rs  config.rs  eureka.rs  jwt.rs  lib.rs  main.rs  mounts.rs  state.rs  sysplex.rs  tn3270.rs
crates/open-mainframe-zosmf/tests/: e2e_jobs.rs
(+572 files in other folders)
