[workspace]
resolver = "2"
members = [
    "crates/open-mainframe",
    "crates/open-mainframe-lang-core",
    "crates/open-mainframe-cobol",
    "crates/open-mainframe-jcl",
    "crates/open-mainframe-runtime",
    "crates/open-mainframe-dataset",
    "crates/open-mainframe-encoding",
    "crates/open-mainframe-sort",
    "crates/open-mainframe-db2",
    "crates/open-mainframe-cics",
    "crates/open-mainframe-assess",
    "crates/open-mainframe-ims",
    "crates/open-mainframe-deploy",
    "crates/open-mainframe-tui",
    "crates/open-mainframe-racf", "crates/open-mainframe-jes2", "crates/open-mainframe-tso",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/toreleon/OpenMainframe"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Decimal arithmetic
rust_decimal = { version = "1", features = ["maths"] }

# System paths
dirs = "5"

# LLVM code generation
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Arena allocation
bumpalo = "3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
open-mainframe-lang-core = { path = "crates/open-mainframe-lang-core" }
open-mainframe-encoding = { path = "crates/open-mainframe-encoding" }
open-mainframe-runtime = { path = "crates/open-mainframe-runtime" }
open-mainframe-dataset = { path = "crates/open-mainframe-dataset" }
open-mainframe-cobol = { path = "crates/open-mainframe-cobol" }
open-mainframe-jcl = { path = "crates/open-mainframe-jcl" }
open-mainframe-sort = { path = "crates/open-mainframe-sort" }
open-mainframe-db2 = { path = "crates/open-mainframe-db2" }
open-mainframe-cics = { path = "crates/open-mainframe-cics" }
open-mainframe-assess = { path = "crates/open-mainframe-assess" }
open-mainframe-ims = { path = "crates/open-mainframe-ims" }
open-mainframe-deploy = { path = "crates/open-mainframe-deploy" }
open-mainframe-tui = { path = "crates/open-mainframe-tui" }
open-mainframe-racf = { path = "crates/open-mainframe-racf" }
open-mainframe-jes2 = { path = "crates/open-mainframe-jes2" }
