[workspace]
resolver = "2"
members = [
    "crates/open-mainframe-lang-core",
    "crates/open-mainframe-cobol",
    "crates/open-mainframe-jcl",
    "crates/open-mainframe-runtime",
    "crates/open-mainframe-dataset",
    "crates/open-mainframe-encoding",
    "crates/open-mainframe-sort",
    "crates/open-mainframe-db2",
    "crates/open-mainframe-cics",
    "crates/open-mainframe-assess",
    "crates/open-mainframe-ims",
    "crates/open-mainframe-deploy",
    "crates/open-mainframe-tui",
    "crates/open-mainframe-racf", "crates/open-mainframe-jes2", "crates/open-mainframe-tso", "crates/open-mainframe-rexx", "crates/open-mainframe-ispf",
    "crates/open-mainframe-hlasm",
    "crates/open-mainframe-mq",
    "crates/open-mainframe-wlm",
    "crates/open-mainframe-smf",
    "crates/open-mainframe-pli",
    "crates/open-mainframe-zosmf",
    "crates/open-mainframe-mvs",
    "crates/open-mainframe-utilities",
    "crates/open-mainframe-syscmd",
    "crates/open-mainframe-pgmmgmt",
    "crates/open-mainframe-uss",
    "crates/open-mainframe-networking",
    "crates/open-mainframe-precompilers",
    "crates/open-mainframe-clist",
    "crates/open-mainframe-crypto",
    "crates/open-mainframe-parmlib",
    "crates/open-mainframe-idms",
    "crates/open-mainframe-adabas",
    "crates/open-mainframe-easytrieve",
    "crates/open-mainframe-natural",
    "crates/open-mainframe-focus",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/toreleon/OpenMainframe"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Decimal arithmetic
rust_decimal = { version = "1", features = ["maths"] }

# System paths
dirs = "5"

# LLVM code generation
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Arena allocation
bumpalo = "3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
open-mainframe-lang-core = { path = "crates/open-mainframe-lang-core" }
open-mainframe-encoding = { path = "crates/open-mainframe-encoding" }
open-mainframe-runtime = { path = "crates/open-mainframe-runtime" }
open-mainframe-dataset = { path = "crates/open-mainframe-dataset" }
open-mainframe-cobol = { path = "crates/open-mainframe-cobol" }
open-mainframe-jcl = { path = "crates/open-mainframe-jcl" }
open-mainframe-sort = { path = "crates/open-mainframe-sort" }
open-mainframe-db2 = { path = "crates/open-mainframe-db2" }
open-mainframe-cics = { path = "crates/open-mainframe-cics" }
open-mainframe-assess = { path = "crates/open-mainframe-assess" }
open-mainframe-ims = { path = "crates/open-mainframe-ims" }
open-mainframe-deploy = { path = "crates/open-mainframe-deploy" }
open-mainframe-tui = { path = "crates/open-mainframe-tui" }
open-mainframe-racf = { path = "crates/open-mainframe-racf" }
open-mainframe-jes2 = { path = "crates/open-mainframe-jes2" }
open-mainframe-tso = { path = "crates/open-mainframe-tso" }
open-mainframe-ispf = { path = "crates/open-mainframe-ispf" }
open-mainframe-hlasm = { path = "crates/open-mainframe-hlasm" }
open-mainframe-mq = { path = "crates/open-mainframe-mq" }
open-mainframe-wlm = { path = "crates/open-mainframe-wlm" }
open-mainframe-smf = { path = "crates/open-mainframe-smf" }
open-mainframe-pli = { path = "crates/open-mainframe-pli" }
open-mainframe-zosmf = { path = "crates/open-mainframe-zosmf" }
open-mainframe-mvs = { path = "crates/open-mainframe-mvs" }
open-mainframe-utilities = { path = "crates/open-mainframe-utilities" }
open-mainframe-syscmd = { path = "crates/open-mainframe-syscmd" }
open-mainframe-pgmmgmt = { path = "crates/open-mainframe-pgmmgmt" }
open-mainframe-uss = { path = "crates/open-mainframe-uss" }
open-mainframe-networking = { path = "crates/open-mainframe-networking" }
open-mainframe-precompilers = { path = "crates/open-mainframe-precompilers" }
open-mainframe-clist = { path = "crates/open-mainframe-clist" }
open-mainframe-crypto = { path = "crates/open-mainframe-crypto" }
open-mainframe-parmlib = { path = "crates/open-mainframe-parmlib" }
open-mainframe-idms = { path = "crates/open-mainframe-idms" }
open-mainframe-adabas = { path = "crates/open-mainframe-adabas" }
open-mainframe-easytrieve = { path = "crates/open-mainframe-easytrieve" }
open-mainframe-natural = { path = "crates/open-mainframe-natural" }
open-mainframe-focus = { path = "crates/open-mainframe-focus" }
open-mainframe-rexx = { path = "crates/open-mainframe-rexx" }
