[package]
name = "open-mainframe-adabas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "z/OS ADABAS (Adaptable Database System) — inverted-list storage, field definitions, descriptors, ACB interface, search, and transaction management"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
