[package]
name = "open-mainframe-clist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "z/OS CLIST — Command List scripting language interpreter"

[dependencies]
thiserror.workspace = true
miette.workspace = true
