[package]
name = "open-mainframe-ims"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IMS/DB hierarchical database support for OpenMainframe"

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = "1"
postgres = { version = "0.19", optional = true }

[features]
default = []
postgres = ["dep:postgres"]

[dev-dependencies]
