[package]
name = "open-mainframe-ispf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ISPF — panel definitions, dialog services, variable pools, tables, file tailoring, and editor"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
