[package]
name = "open-mainframe-jcl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JCL interpreter for OpenMainframe"

[dependencies]
miette.workspace = true
thiserror.workspace = true
open-mainframe-lang-core.workspace = true
open-mainframe-dataset.workspace = true
open-mainframe-sort.workspace = true

[dev-dependencies]
