[package]
name = "open-mainframe-lang-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and traits for OpenMainframe language compilers"

[dependencies]
# Intentionally empty — this crate provides only plain Rust types and traits.
# Language crates add miette/thiserror for rich error rendering on top of these types.

[dev-dependencies]
