[package]
name = "open-mainframe-mvs"
description = "MVS system services (SVCs) for OpenMainframe — DYNALLOC, WTO, ENQ, ESTAE, task management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync", "time", "rt"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
open-mainframe-dataset.workspace = true
open-mainframe-racf.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
