[package]
name = "open-mainframe-pli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Enterprise PL/I — lexer, parser, type system, interpreter, and built-in functions"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
