[package]
name = "open-mainframe-precompilers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "z/OS COBOL Precompilers — DB2 and CICS source-to-source transformation"

[dependencies]
thiserror.workspace = true
miette.workspace = true
