[package]
name = "open-mainframe-racf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RACF security subsystem — user/group profiles, dataset protection, SAF/RACROUTE interface, authentication"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
