[package]
name = "open-mainframe-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime library for OpenMainframe COBOL execution"

[dependencies]
miette.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
open-mainframe-encoding.workspace = true
open-mainframe-sort.workspace = true

[dev-dependencies]
