[package]
name = "open-mainframe-syscmd"
description = "z/OS system commands and console — DISPLAY, START, STOP, CANCEL, REPLY, SDSF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette.workspace = true
thiserror.workspace = true
