[package]
name = "open-mainframe-utilities"
description = "z/OS utility programs — IEBCOPY, IEBGENER, IEBCOMPR, IEBUPDTE, IEBPTPCH, IEBDG, IEH, AMASPZAP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
